<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wso2.iot.nfcprovisioning.SplashActivity">



    <ImageView
        android:id="@+id/imageViewRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/splash" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/wso2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:gravity="center"
        android:paddingTop="20dp"
        >
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nfc"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@android:color/white"
            android:paddingEnd="5dp" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/provisioning"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-light"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textViewFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:text="@string/footer_text"
        android:textColor="@android:color/white" />





</RelativeLayout>
